--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,6 @@
     <hr>
     <h2>Joke Title</h2>
     <p>Ha Ha</p>
-    <button id="btn">More..</button>
+    <button id="btn">More</button>
   </body>
 </html>
